--- a/views/admin/hospital.ejs
+++ b/views/admin/hospital.ejs
@@ -40,123 +40,61 @@
             <br>
             <table class="info-table">
                 <tr>
-                    <td>
-                        주소
-                    </td>
-                    <td colspan="3">
-                        <%= results.addr %> <%= results.postNo %>
-                    </td>
+                    <td>주소</td>
+                    <td colspan="3"><%= results.addr %> <%= results.postNo %></td>
                 </tr>
                 <tr>
-                    <td>
-                        전화번호
-                    </td>
-                    <td>
-                        <%= results.telno %>
-                    </td>
-                    <td>
-                        개설일자
-                    </td>
-                    <td>
-                        <%= results.estbDd %>
-                    </td>
+                    <td>전화번호</td>
+                    <td><%= results.telno %></td>
+                    <td>개설일자</td>
+                    <td><%= results.estbDd %></td>
                 </tr>
                 <tr>
-                    <td>
-                        의사총수
-                    </td>
-                    <td colspan="3">
-                        <%= results.drTotCnt %>
-                    </td>
+                    <td class="text-danger">신고횟수</td>
+                    <td class="text-danger"><%= results.reports_cnt %></td>
+                    <td>의사총수</td>
+                    <td><%= results.drTotCnt %></td>
                 </tr>
                 <tr>
-                    <td>
-                        의과일반의 인원수
-                    </td>
-                    <td>
-                        <%= results.mdeptGdrCnt %>
-                    </td>
-                    <td>
-                        의과인턴 인원수
-                    </td>
-                    <td>
-                        <%= results.mdeptIntnCnt %>
-                    </td>
+                    <td>의과일반의 인원수</td>
+                    <td><%= results.mdeptGdrCnt %></td>
+                    <td>의과인턴 인원수</td>
+                    <td><%= results.mdeptIntnCnt %></td>
                 </tr>
                 <tr>
-                    <td>
-                        의과레지던트 인원수
-                    </td>
-                    <td>
-                        <%= results.mdeptResdntCnt %>
-                    </td>
-                    <td>
-                        의과전문의 인원수
-                    </td>
-                    <td>
-                        <%= results.mdeptSdrCnt %>
-                    </td>
+                    <td>의과레지던트 인원수</td>
+                    <td><%= results.mdeptResdntCnt %></td>
+                    <td>의과전문의 인원수</td>
+                    <td><%= results.mdeptSdrCnt %></td>
                 </tr>
                 <tr>
-                    <td>
-                        치과일반의 인원수
-                    </td>
-                    <td>
-                        <%= results.detyGdrCnt %>
-                    </td>
-                    <td>
-                        치과인턴 인원수
-                    </td>
-                    <td>
-                        <%= results.detyIntnCnt %>
-                    </td>
+                    <td>치과일반의 인원수</td>
+                    <td><%= results.detyGdrCnt %></td>
+                    <td>치과인턴 인원수</td>
+                    <td><%= results.detyIntnCnt %></td>
                 </tr>
                 <tr>
-                    <td>
-                        치과레지던트 인원수
-                    </td>
-                    <td>
-                        <%= results.detyResdntCnt %>
-                    </td>
-                    <td>
-                        치과전문의 인원수
-                    </td>
-                    <td>
-                        <%= results.detySdrCnt %>
-                    </td>
+                    <td>치과레지던트 인원수</td>
+                    <td><%= results.detyResdntCnt %></td>
+                    <td>치과전문의 인원수</td>
+                    <td><%= results.detySdrCnt %></td>
                 </tr>
                 <tr>
-                    <td>
-                        한방일반의 인원수
-                    </td>
-                    <td>
-                        <%= results.cmdcGdrCnt %>
-                    </td>
-                    <td>
-                        한방인턴 인원수
-                    </td>
-                    <td>
-                        <%= results.cmdcIntnCnt %>
-                    </td>
+                    <td>한방일반의 인원수</td>
+                    <td><%= results.cmdcGdrCnt %></td>
+                    <td>한방인턴 인원수</td>
+                    <td><%= results.cmdcIntnCnt %></td>
                 </tr>
                 <tr>
-                    <td>
-                        한방레지던트 인원수
-                    </td>
-                    <td>
-                        <%= results.cmdcResdntCnt %>
-                    </td>
-                    <td>
-                        한방전문의 인원수
-                    </td>
-                    <td>
-                        <%= results.cmdcSdrCnt %>
-                    </td>
+                    <td>한방레지던트 인원수</td>
+                    <td><%= results.cmdcResdntCnt %></td>
+                    <td>한방전문의 인원수</td>
+                    <td><%= results.cmdcSdrCnt %></td>
                 </tr>
             </table>
         </div>
         <a href="/admin/hospitals" class="btn btn-outline-dark">이전 페이지</a>
-        <!-- <a href="/admin/hospitals/<%= results._id %>" class="btn btn-outline-info">수정</a> -->
+        <a href="/admin/hospitals/<%= results._id %>" class="btn btn-outline-info">수정</a>
         <form action="/admin/hospitals/<%= results._id %>?_method=DELETE" method="POST" class="d-inline" onsubmit="if(!confirm('해당 병원 데이터를 삭제하시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-outline-danger">삭제</button>
         </form>
