--- a/views/comments/index_admin.ejs
+++ b/views/comments/index_admin.ejs
@@ -59,7 +59,7 @@
                 <div class="card-body">
                     <div class="card-subtitle text-muted mb-2 row">
                         <div class="col-md-2 font-weight-bold"><%= comment.writer_id[0].user_id %></div>
-                        <div class="col-md-2"><%= comment.created_at.toLocaleDateString() %></div>
+                        <div class="col-md-4"><%= comment.created_at.toLocaleString() %></div>
                     </div>
                     <div class="card-text mb-2">
                         <%= comment.description %>
