--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -154,6 +154,62 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-group row">
+                            <label for="withdrawal" class="col-sm-2 col-form-label">회원탈퇴</label>
+                            <!-- Button trigger modal -->
+                            <button type="button" id="withdrawal" class="btn btn-danger" data-toggle="modal" data-target="#withdrawalModal">
+                                탈퇴하기
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="withdrawalModal" tabindex="-1" role="dialog" aria-labelledby="withdrawalModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="withdrawalModalLabel">회원 탈퇴하기</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <form action="/process/withdrawal" method="POST" onsubmit="if(!confirm('회원을 탈퇴하시겠습니까?')) {return false; }">
+                                            <div class="modal-body">
+                                                <div class="form-group">
+                                                    <p>회원 탈퇴를 희망하시면 아래 본인 아이디와 비밀번호를 입력해주세요.</p>
+                                                    <p>회원 탈퇴 시 동일한 아이디로 가입이 불가능합니다.</p>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="input_id" class="col-sm-3 col-form-label">아이디</label>
+                                                    <div class="col-sm-9">
+                                                        <input type="text" required name="input_id" class="form-control" id="input_id" placeholder="ID" minlength="5" maxlength="20">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="withdrawal" class="col-sm-3 col-form-label">비밀번호</label>
+                                                    <div class="col-sm-9">
+                                                        <input type="password" required name="withdrawal" class="form-control" id="withdrawal" minlength="7">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                                <button type="submit" class="btn btn-primary">완료</button>
+                                            </div>
+                                        </form>
+                                        <script>
+                                            $(document).ready(function () {
+                                                $("#new_password_check").on("keyup", function () {
+                                                    if ($("#new_password").val() === $(this).val()) {
+                                                        document.getElementById("submit_btn").disabled = false;
+                                                    } else {
+                                                        document.getElementById("submit_btn").disabled = true;
+                                                    }
+                                                });
+                                            });
+                                        </script>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
