주소창 닫기 눌러야 꺼지는부분 수정

--- a/design/src/comments.css
+++ b/design/src/comments.css
@@ -1,7 +1,7 @@
 .writer_id {
     font-weight: bold;
     font-size: calc(14px + 0.3vw);
-    min-height: 4vw;
+    /*min-height: 4vw;*/
     margin: 1vw;
 }
 
