--- a/design/src/App.css
+++ b/design/src/App.css
@@ -157,6 +157,7 @@ ul, li {
   width: 100%;
   height: 30vh;
   background: #f8f8f8;
+  text-align: left;
 }
 
 .MainMidDiv span {
@@ -238,7 +239,7 @@ ul, li {
   z-index: 1000;
   border-radius: 3vh 3vh 0 0;
 
-  margin-top: 20vw;
+  margin-top: 45vh;
 }
 
 .footerText {
