feat: :lipstick: add <a> to show a certain member's activity log
If you click the member's user_id, a new window will be popped up and its contents is the member's comments and reports.

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -46,7 +46,7 @@
                                 <% users.forEach((user, index) => { %>
                                 <tr>
                                     <th scope="row" style="font-size: 0.8rem"><%= index + 1 %></th>
-                                    <td style="font-size: 0.8rem"><%= user.user_id %></td>
+                                    <td style="font-size: 0.8rem"><a href="#" onclick="window.open('/admin/member/<%= user._id %>', '_blank', 'width=600 height=600')"><%= user.user_id %></a></td>
                                     <td style="font-size: 0.8rem"><%= user.created_at %></td>
                                     <td style="font-size: 0.8rem"><%= user.is_admin %></td>
                                 </tr>
