--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,21 @@
 <body>
     <br>
     <div class="container">
-        <h2 class="mb-4"><a href="/">나아라</a></h2>
+        <nav class="navbar navbar-light bg-light justify-content-between">
+            <a class="navbar-brand" href="/">나아라</a>
+            <form class="form-inline">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="button"><a href="/">검색하기</a></button>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-outline-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        커뮤니티
+                    </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/community/clinics">상담게시판</a>
+                        <a class="dropdown-item" href="/community/questions">질문게시판</a>
+                    </div>
+                </div>
+            </form>
+        </nav>
 
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
