--- a/views/community/clinics.ejs
+++ b/views/community/clinics.ejs
@@ -141,7 +141,11 @@
             </div>
         </div>
         <!-- Main Content-->
-        <div class="container px-4 px-lg-5">
+        <div class="container px-4 px-lg-5 my-4">
+            <div class="d-flex justify-content-end">
+                <a href="/community/clinics-write" class="btn btn-outline-secondary">작성</a>
+                <a href="#" class="btn btn-outline-dark">Dark</a>
+            </div>
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
