--- a/views/community/post.ejs
+++ b/views/community/post.ejs
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
         rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="../css/styles.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -41,7 +41,7 @@
     <br>
     <div class="container">
         <nav class="navbar navbar-light bg-light justify-content-between">
-            <a class="navbar-brand" href="/">나아라</a>
+            <a class="navbar-brand" href="/">나아라 <%= category %></a>
             <form class="form-inline">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="button"><a href="/">검색하기</a></button>
                 <div class="btn-group">
