--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>나아라 - 리뷰</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,6 +21,31 @@
                 리뷰 달기
             </div>
             <div class="card-body">
+                <% if (locals.admin) { %>
+                <form action="/comments/write" method="POST" onsubmit="if(!confirm('한 번 작성한 리뷰는 삭제 및 수정이 불가합니다.')) {return false; }">
+                    <div class="form-group">
+                        <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다. (5글자 이상부터 등록 가능)"></textarea>
+                    </div>
+                    <div class=" d-flex justify-content-end">
+                        <input type="hidden" name="writer_id" value="<%= admin %>">
+                        <input type="hidden" name="hospital_id" value="<%= hospital._id %>">
+                        <span id="description_cnt">(0 / 500)&nbsp;&nbsp;</span>
+                        <button id="submit_btn" type="submit" class="btn btn-primary btn-sm" disabled>완료</button>
+                    </div>
+                </form>
+                <% } else if (locals.user) { %>
+                <form action="/comments/write" method="POST" onsubmit="if(!confirm('한 번 작성한 리뷰는 삭제 및 수정이 불가합니다.')) {return false; }">
+                    <div class="form-group">
+                        <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다. (5글자 이상부터 등록 가능)"></textarea>
+                    </div>
+                    <div class=" d-flex justify-content-end">
+                        <input type="hidden" name="writer_id" value="<%= user %>">
+                        <input type="hidden" name="hospital_id" value="<%= hospital._id %>">
+                        <span id="description_cnt">(0 / 500)&nbsp;&nbsp;</span>
+                        <button id="submit_btn" type="submit" class="btn btn-primary" disabled>완료</button>
+                    </div>
+                </form>
+                <% } else { %>
                 <form>
                     <div class="form-group">
                         <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다. 회원만 리뷰를 작성할 수 있습니다." readonly></textarea>
@@ -29,10 +54,32 @@
                         <button type="button" class="btn btn-primary" disabled>완료</button>
                     </div>
                 </form>
-
+                <% } %>
             </div>
         </div>
 
+        <% if (locals.user) { %>
+        <script>
+            // Check if description is less than or equal to 500 characters
+            $(document).ready(function () {
+                $("#description").on("keyup", function () {
+                    $("#description_cnt").html("(" + $(this).val().length + " / 500)");
+                    if ($(this).val().length < 5) {
+                        const btn = document.getElementById("submit_btn");
+                        btn.disabled = true;
+                    } else if ($(this).val().length >= 5) {
+                        // $("#submit_btn").disabled = false;
+                        const btn = document.getElementById("submit_btn");
+                        btn.disabled=false;
+                    }
+                    if ($(this).val().length > 500) {
+                        $(this).val($(this).val().substring(0, 500));
+                        $("#description_cnt").html("(500 / 500)");
+                    }
+                });
+            });
+        </script>
+        <% } %>
         <% comments.forEach((comment)=> { %>
             <div class="card mt-4">
                 <div class="card-body">
@@ -43,6 +90,12 @@
                     <div class="card-text mb-2">
                         <%= comment.description %>
                     </div>
+                    <% if (locals.admin) { %>
+                    <form action="/comments/delete/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline d-flex justify-content-end" onsubmit="if(!confirm('댓글을 삭제하시겠습니까?')) {return false; }">
+                        <input type="hidden" name="hospital_id" value="<%= hospital._id %>">
+                        <button type="submit" class="btn btn-danger btn-sm">삭제</button>
+                    </form>
+                    <% } %>
                 </div>
             </div>
         <% }) %>
